<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:defaultValue="@string/blank"
        android:key="pref_brewer_name"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/brewer_name_label"
        android:summary="@string/brewer_name_summary"/>
    <ListPreference
        android:key="pref_system_of_measurement"
        android:title="@string/units_label"
        android:summary="@string/system_of_measurement_summary"
        android:dialogTitle="@string/units_label"
        android:entries="@array/systems_keys"
        android:entryValues="@array/systems_values"
        android:defaultValue="@string/value_default"/>
    <ListPreference
        android:key="pref_gravity_units"
        android:title="@string/gravity_units_label"
        android:summary="@string/gravity_units_summary"
        android:dialogTitle="@string/gravity_units_label"
        android:entries="@array/gravity_keys"
        android:entryValues="@array/gravity_values"
        android:defaultValue="@string/value_default"/>
</PreferenceScreen>